# bazel-esbuild-lab

./: .gitignore  README.md  WORKSPACE  defs.bzl
pkg/front/: .swcrc  BUILD.bazel  package.json  tsconfig.json
pkg/front/app/: BUILD.bazel  index.html  main.tsx  webpack.dev-server.config.js
pkg/front/app/src/: app.tsx
